<resources>
    <string name="app_name">Crud Android Mysql</string>
    <string name="hapus_pegawai">Hapus Pegawai</string>
    <string name="gajih">Gaji</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="daftar_pegawai">Daftar Pegawai</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="posisi">Posisi</string>
    <string name="salary">Salary</string>
    <string name="update_pegawai">Update Pegawai</string>
    <string name="id_pegawai">ID Pegawai</string>

</resources>